--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                         </div>
                                     </div>
                                     <div data-bind="visible: isFilesLoaded">
-                                        <div class="row">
+                                        <div class="row" data-bind="visible: notExistContentInDesc() && notExistContentInDesc().length">
                                             <div class="col-md-12">
                                                 <div class="box box-danger">
                                                     <div class="box-header with-border">
@@ -100,7 +100,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="row">
+                                        <div class="row" data-bind="visible: notExistBehaviorInDesc() && notExistBehaviorInDesc().length">
                                             <div class="col-md-12">
                                                 <div class="box box-danger">
                                                     <div class="box-header with-border">
@@ -120,7 +120,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="row">
+                                        <div class="row" data-bind="visible: notExistOutcomesInDesc() && notExistOutcomesInDesc().length">
                                             <div class="col-md-12">
                                                 <div class="box box-danger">
                                                     <div class="box-header with-border">
@@ -153,7 +153,7 @@
                                         </div>
                                     </div>
                                     <div data-bind="visible: isFilesLoaded">
-                                        <div class="row">
+                                        <div class="row" data-bind="visible: notExistContentInXml() && notExistContentInXml().length">
                                             <div class="col-md-12">
                                                 <div class="box box-danger">
                                                     <div class="box-header with-border">
@@ -173,7 +173,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="row">
+                                        <div class="row" data-bind="visible: notExistBehaviorInXml() && notExistBehaviorInXml().length">
                                             <div class="col-md-12">
                                                 <div class="box box-danger">
                                                     <div class="box-header with-border">
@@ -193,7 +193,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="row">
+                                        <div class="row" data-bind="visible: notExistOutcomesInXml() && notExistOutcomesInXml().length">
                                             <div class="col-md-12">
                                                 <div class="box box-danger">
                                                     <div class="box-header with-border">
@@ -218,6 +218,12 @@
                             </div>
 
                         </div>
+                    </div>
+                    <div class="col-xs-12" data-bind="visible: isAllGood">
+                        <div class="box box-success">
+                            <h1 style="text-align: center">ALL GOOD!</h1>
+                        </div>
+
                     </div>
                 </div>
             </div>
