--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="col-xs-12">
                         <div class="box box-primary">
                             <div class="row">
-                                <div class="col-md-6">
+                                <div class="col-xs-6">
                                     <div class="box-header with-border">
                                         <h3 class="box-title">Import Descriptor (json) file</h3>
                                     </div>
@@ -142,7 +142,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-xs-6">
                                     <div class="box-header with-border">
                                         <h3 class="box-title">Import content (xml) file</h3>
                                     </div>
@@ -289,6 +289,8 @@
 						behaviorFromXML.push(xmlName.replace(/^_behavior\.|\.text$/g, ""))
 					} else if (xmlName.startsWith('_behavior') && xmlName.endsWith('.bool')) {
 						behaviorFromXML.push(xmlName.replace(/^_behavior\.|\.bool$/g, ""))
+					} else if (xmlName.startsWith('_behavior') && xmlName.endsWith('.boolean')) {
+						behaviorFromXML.push(xmlName.replace(/^_behavior\.|\.boolean$/g, ""))
 					} else if (xmlName.startsWith('_behavior') && xmlName.endsWith('.number')) {
 						behaviorFromXML.push(xmlName.replace(/^_behavior\.|\.number$/g, ""))
 					} else if (xmlName.startsWith('_outcomes')) {
