--- a/index.html
+++ b/index.html
@@ -1,49 +1,28 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
+<html>
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title layout:title-pattern="$DECORATOR_TITLE - $CONTENT_TITLE">Descriptor Validator</title>
+
+    <title>Descriptor Validator</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
     <!-- Bootstrap 3.3.6 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" />
-    <!-- Ionicons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" />
-    <!-- Theme style -->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.2/css/AdminLTE.min.css" />
-    <!-- AdminLTE Skins. Choose a skin from the css/skins
-       folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.2/css/skins/_all-skins.min.css"/>
-    <!-- iCheck -->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.2/css/skins/skin-blue.min.css" />
-    <!-- Morris chart -->
-    <!--  <link rel="stylesheet" href="/plugins/morris/morris.css"/> -->
-    <!-- jvectormap -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jvectormap/2.0.4/jquery-jvectormap.min.css"/>
-    <!-- Date Picker -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker3.css"/>
-    <!-- Daterange picker -->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/2.1.25/daterangepicker.css"/>
-    <!-- bootstrap wysihtml5 - text editor -->
-    <!--  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-wysiwyg/0.3.3/bootstrap3-wysihtml5.js"/> -->
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
-    <script src="https://www.w3schools.com/lib/w3.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/x2js/1.2.0/xml2json.js"></script>
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
 </head>
 <body class="skin-blue layout-top-nav">
 <div class="wrapper">
     <header class="main-header">
-        <div th:replace="/fragments/header"></div>
+<!--        <div th:replace="/fragments/header"></div>-->
     </header>
     <!-- Left side column. contains the logo and sidebar -->
     <!-- <aside class="main-sidebar">
@@ -53,7 +32,7 @@
     <div class="content-wrapper">
         <!-- Main content -->
         <section class="content">
-            <section layout:fragment="header">
+            <section>
                 <h1>
                     Descriptor Validator
                     <br />
@@ -64,7 +43,7 @@
                    <li class="active">Import CSV file</li>
                    </ol> -->
             </section>
-            <div layout:fragment="content">
+            <div>
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="box box-primary">
@@ -239,36 +218,12 @@
         reserved.
     </footer>
 </div>
-<!-- /.content-wrapper -->
-<!-- Control Sidebar -->
-<!-- <aside class="control-sidebar control-sidebar-dark">
-   <div th:replace="/fragments/control-sidebar"></div>
-   </aside> -->
+
 </div>
 <!-- ./wrapper -->
-<!-- jQuery 2.2.0 -->
-<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-<!-- jQuery UI 1.11.4 -->
-<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-<script>
-	$.widget.bridge('uibutton', $.ui.button);
-</script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-<!-- <script src="/plugins/morris/morris.min.js"></script> -->
-<script src="https://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.min.js"></script>
-<!-- <script src="/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-   <script src="/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-Knob/1.2.13/jquery.knob.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/2.1.25/daterangepicker.js"></script>
-<!-- <script src="/plugins/datepicker/bootstrap-datepicker.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/validator/9.1.1/validator.min.js"></script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-wysiwyg/0.3.3/amd/bootstrap3-wysihtml5.all.min.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-slimScroll/1.3.8/jquery.slimscroll.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
-<div layout:fragment="after-scripts">
+
+
+<div>
     <script>
 		const convert = new X2JS();
 		const validateDescriptor = (descriptor, contentXML) => {
@@ -287,8 +242,6 @@
 						contentFromXML.push(xmlName.replace(/^_content\.|\.Text$/g, ""));
 					} else if (xmlName.startsWith('_behavior') && xmlName.endsWith('.text')) {
 						behaviorFromXML.push(xmlName.replace(/^_behavior\.|\.text$/g, ""))
-					} else if (xmlName.startsWith('_behavior') && xmlName.endsWith('.bool')) {
-						behaviorFromXML.push(xmlName.replace(/^_behavior\.|\.bool$/g, ""))
 					} else if (xmlName.startsWith('_behavior') && xmlName.endsWith('.boolean')) {
 						behaviorFromXML.push(xmlName.replace(/^_behavior\.|\.boolean$/g, ""))
 					} else if (xmlName.startsWith('_behavior') && xmlName.endsWith('.number')) {
@@ -329,12 +282,6 @@
 			check(behaviorFromDesc, behaviorFromXML, 'itemId', notExistBehaviorInDesc, notExistBehaviorInXml);
 			check(outcomesFromDesc, outcomesFromXML, 'actionId', notExistOutcomesInDesc, notExistOutcomesInXml);
 
-			console.log("notExistContentInDesc", notExistContentInDesc);
-			console.log("notExistContentInXml", notExistContentInXml);
-			notExistContentInXml.forEach(item =>
-				console.log(`content.${item.name}.Text="${item.defaultValue}"`)
-			);
-
 			return {
 				notExistContentInDesc,
 				notExistContentInXml,
@@ -348,8 +295,8 @@
 		function ViewModel() {
 			self = this;
 			self.isFilesLoaded = ko.observable(false);
-			// Descriptor
 			self.descriptorObj = ko.observable(null);
+			self.contentObj = ko.observable(null);
 			self.descriptorMissingContent = ko.observableArray();
 			self.notExistContentInDesc = ko.observable(null);
 			self.notExistContentInXml = ko.observable(null);
@@ -385,12 +332,11 @@
 			}
 
 			self.openDescriptorFile = function(data, event) {
-				var input = event.target;
-				var reader = new FileReader();
+				const input = event.target;
+				const reader = new FileReader();
 				reader.onload = function(){
-					var text = reader.result.trim();
+					const text = reader.result.trim();
 					const json = JSON.parse(text);
-					console.log('json', json);
 					self.descriptorObj(json);
 					if (self.contentObj()) {
 						self.onFilesLoaded();
@@ -399,21 +345,13 @@
 				reader.readAsText(input.files[0]);
 			};
 
-			// END Descriptor
-			// Content
-			self.contentObj = ko.observable(null);
-			self.contentMissingContent = ko.observableArray();
-
 			self.openContentFile = function(data, event) {
-				var input = event.target;
-				var reader = new FileReader();
+				const input = event.target;
+				const reader = new FileReader();
 				reader.onload = function(){
 					const text = reader.result.trim();
-					// console.log('text', text);
 					const xml = convert.parseXmlString(text);
-					// console.log('xml', xml);
 					const json = convert.xml2json(xml);
-					console.log('json', json);
 					self.contentObj(json);
 					if (self.descriptorObj()) {
 						self.onFilesLoaded();
@@ -421,9 +359,6 @@
 				};
 				reader.readAsText(input.files[0]);
 			};
-
-
-
 		}
 		const myViewModel = new ViewModel();
 
