--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     </div>
     </section>
     <!-- /.content -->
-    <footer class="main-footer" style="position: absolute; bottom: 0; width: 100%">
+    <footer class="main-footer" style="bottom: 0; left: 0; position: fixed; right: 0; z-index: 1032;">
         <div class="pull-right hidden-xs">
             <b>Version</b> 0.0.1
         </div>
