--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
 
     <title>Descriptor Validator</title>
+    <link rel="icon" href="https://amdocsprodmain.service-now.com/cee15a0fdbcf2300396ce2a94b961994.iix">
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
     <!-- Bootstrap 3.3.6 -->
